setting prodotto e imm. alternativa

--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
 
 <body>
     
+    <main>
+        <div class="container">
+            <div class="row">
+               <div class="product">
+                   <img src="img/1.webp" alt="T-shirt Levi's">
+                   <img class="alternative" src="img/1b.webp" alt="Red Jacket">
+               </div>
+            </div>
+        </div>
+    </main>
+    
 </body>
 </html>
