--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <div class="row">
                <div class="product">
                    <img src="img/1.webp" alt="T-shirt Levi's">
+                   <span class="label discount">-50%</span>
+                   <span class="label sustain">Sostenibilità</span>
+                   <span class="label wishlist">&hearts;</span>
                    <img class="alternative" src="img/1b.webp" alt="Red Jacket">
                </div>
             </div>
