--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                    <span class="label wishlist">&hearts;</span>
                    <img class="alternative" src="img/1b.webp" alt="Red Jacket">
                </div>
-            </div>
+               <div class="brand">Levi's</div>
+               <div class="dress">RELAXED TEE FIT UNISEX</div>
+               <span class="price">14,99 € </span><del>29,99 €</del>
         </div>
     </main>
     
