first row complete

--- a/index.html
+++ b/index.html
@@ -12,17 +12,54 @@
     
     <main>
         <div class="container">
+            <!-- 1ST ROW -->
             <div class="row">
-               <div class="product">
-                   <img src="img/1.webp" alt="T-shirt Levi's">
-                   <span class="label discount">-50%</span>
-                   <span class="label sustain">Sostenibilità</span>
-                   <span class="label wishlist">&hearts;</span>
-                   <img class="alternative" src="img/1b.webp" alt="Red Jacket">
-               </div>
-               <div class="brand">Levi's</div>
-               <div class="dress">RELAXED TEE FIT UNISEX</div>
-               <span class="price">14,99 € </span><del>29,99 €</del>
+
+                <!-- 1st PRODUCT -->
+                <div class="product">
+                    <!-- background image -->
+                    <div class="bg-product">
+                        <img src="img/1.webp" alt="Levi's Tee">
+                        <span class="label discount">-50%</span>
+                        <span class="label sustain">Sostenibilità</span>
+                        <span class="label wishlist">&hearts;</span>
+                        <img class="alternative" src="img/1b.webp" alt="Red Jacket">
+                    </div>
+                    <!-- descriptions -->
+                    <div class="brand">Levi's</div>
+                    <div class="dress">RELAXED TEE FIT UNISEX</div>
+                    <span class="price">14,99 € </span><del>29,99 €</del>
+
+                </div>
+
+                <!-- 2ND PRODUCT -->
+                <div class="product">
+                    <!-- background image -->
+                    <div class="bg-product">
+                        <img src="img/2.webp" alt="Roses Tee">
+                        <span class="label discount">-30%</span>
+                        <span class="label wishlist">&hearts;</span>
+                        <img class="alternative" src="img/2b.webp" alt="Red Skirt">
+                    </div>
+                    <!-- descriptions -->
+                    <div class="brand">Guess</div>
+                    <div class="dress">ROSES TEE</div>
+                    <span class="price">20,99 € </span><del>29,99 €</del>
+                </div>
+
+                <div class="product">
+                    <!-- background image -->
+                    <div class="bg-product">
+                        <img src="img/3.webp" alt="Gree Dress">
+                        <span class="label wishlist">&hearts;</span>
+                        <img class="alternative" src="img/3b.webp" alt="Brown Dress">
+                    </div>
+                    <!-- descriptions -->
+                    <div class="brand">Come Zucchero Filato</div>
+                    <div class="dress">VOGLIA DI COLORI PASTELLO</div>
+                    <span class="price">129,99 €</span>
+                </div>
+            </div>
         </div>
     </main>
     
