--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!-- 1ST ROW -->
             <div class="row">
 
-                <!-- 1st PRODUCT -->
+                <!-- 1ST PRODUCT -->
                 <div class="product">
                     <!-- background image -->
                     <div class="bg-product">
@@ -46,7 +46,8 @@
                     <div class="dress">ROSES TEE</div>
                     <span class="price">20,99 € </span><del>29,99 €</del>
                 </div>
-
+                
+                <!-- 3RD PRODUCT -->
                 <div class="product">
                     <!-- background image -->
                     <div class="bg-product">
@@ -58,6 +59,56 @@
                     <div class="brand">Come Zucchero Filato</div>
                     <div class="dress">VOGLIA DI COLORI PASTELLO</div>
                     <span class="price">129,99 €</span>
+                </div>
+            </div>
+
+            <!-- 2ND ROW -->
+            <div class="row">
+
+                <!-- 4TH PRODUCT -->
+                <div class="product">
+                    <!-- background image -->
+                    <div class="bg-product">
+                        <img src="img/4.webp" alt="Levi's Tee">
+                        <span class="label discount">-50%</span>
+                        <span class="label sustain">Sostenibilità</span>
+                        <span class="label wishlist">&hearts;</span>
+                        <img class="alternative" src="img/4b.webp" alt="Black Jacket">
+                    </div>
+                    <!-- descriptions -->
+                    <div class="brand">Levi's</div>
+                    <div class="dress">TEE UNISEX</div>
+                    <span class="price">14,99 € </span><del>29,99 €</del>
+
+                </div>
+
+                <!-- 5TH PRODUCT -->
+                <div class="product">
+                    <!-- background image -->
+                    <div class="bg-product">
+                        <img src="img/5.webp" alt="Pink Dress">
+                        <span class="label wishlist">&hearts;</span>
+                        <img class="alternative" src="img/5b.webp" alt="Silver Purse">
+                    </div>
+                    <!-- descriptions -->
+                    <div class="brand">Maya Deluxe</div>
+                    <div class="dress">STRIPE BODICE</div>
+                    <span class="price">99,99 € </span>
+                </div>
+                
+                <!-- 6TH PRODUCT -->
+                <div class="product">
+                    <!-- background image -->
+                    <div class="bg-product">
+                        <img src="img/6.webp" alt="Black Sweater">
+                        <span class="label sustain">Sostenibilità</span>
+                        <span class="label wishlist">&hearts;</span>
+                        <img class="alternative" src="img/6b.webp" alt="Brown Skirt">
+                    </div>
+                    <!-- descriptions -->
+                    <div class="brand">Esprit</div>
+                    <div class="dress">MAGLIONE - BLACK</div>
+                    <span class="price">29,99 €</span>
                 </div>
             </div>
         </div>
