--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Boolando</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -20,9 +20,11 @@
                     <!-- background image -->
                     <div class="bg-product">
                         <img src="img/1.webp" alt="Levi's Tee">
-                        <span class="label discount">-50%</span>
-                        <span class="label sustain">Sostenibilità</span>
-                        <span class="label wishlist">&hearts;</span>
+                        <div class="labels">
+                            <span class="label discount">-50%</span>
+                            <span class="label sustain">Sostenibilità</span>
+                        </div>
+                        <span class=" wishlist">&hearts;</span>
                         <img class="alternative" src="img/1b.webp" alt="Red Jacket">
                     </div>
                     <!-- descriptions -->
@@ -37,8 +39,10 @@
                     <!-- background image -->
                     <div class="bg-product">
                         <img src="img/2.webp" alt="Roses Tee">
-                        <span class="label discount">-30%</span>
-                        <span class="label wishlist">&hearts;</span>
+                        <div class="labels">
+                            <span class="label discount">-30%</span>
+                        </div>
+                        <span class=" wishlist">&hearts;</span>
                         <img class="alternative" src="img/2b.webp" alt="Red Skirt">
                     </div>
                     <!-- descriptions -->
@@ -52,7 +56,7 @@
                     <!-- background image -->
                     <div class="bg-product">
                         <img src="img/3.webp" alt="Gree Dress">
-                        <span class="label wishlist">&hearts;</span>
+                        <span class="wishlist">&hearts;</span>
                         <img class="alternative" src="img/3b.webp" alt="Brown Dress">
                     </div>
                     <!-- descriptions -->
@@ -70,9 +74,11 @@
                     <!-- background image -->
                     <div class="bg-product">
                         <img src="img/4.webp" alt="Levi's Tee">
-                        <span class="label discount">-50%</span>
-                        <span class="label sustain">Sostenibilità</span>
-                        <span class="label wishlist">&hearts;</span>
+                        <div class="labels">
+                            <span class="label discount">-50%</span>
+                            <span class="label sustain">Sostenibilità</span>
+                        </div>
+                        <span class="wishlist">&hearts;</span>        
                         <img class="alternative" src="img/4b.webp" alt="Black Jacket">
                     </div>
                     <!-- descriptions -->
@@ -87,7 +93,7 @@
                     <!-- background image -->
                     <div class="bg-product">
                         <img src="img/5.webp" alt="Pink Dress">
-                        <span class="label wishlist">&hearts;</span>
+                        <span class="wishlist">&hearts;</span>
                         <img class="alternative" src="img/5b.webp" alt="Silver Purse">
                     </div>
                     <!-- descriptions -->
@@ -101,8 +107,10 @@
                     <!-- background image -->
                     <div class="bg-product">
                         <img src="img/6.webp" alt="Black Sweater">
-                        <span class="label sustain">Sostenibilità</span>
-                        <span class="label wishlist">&hearts;</span>
+                        <div class="labels">
+                            <span class="label sustain">Sostenibilità</span>
+                        </div>
+                        <span class="wishlist">&hearts;</span>
                         <img class="alternative" src="img/6b.webp" alt="Brown Skirt">
                     </div>
                     <!-- descriptions -->
