refactoring for hover image and complete

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="product">
                     <!-- background image -->
                     <div class="bg-product">
-                        <img src="img/1.webp" alt="Levi's Tee">
+                        <img class="img-default" src="img/1.webp" alt="Levi's Tee">
                         <div class="labels">
                             <span class="label discount">-50%</span>
                             <span class="label sustain">Sostenibilità</span>
@@ -31,14 +31,13 @@
                     <div class="brand">Levi's</div>
                     <div class="dress">RELAXED TEE FIT UNISEX</div>
                     <span class="price">14,99 € </span><del>29,99 €</del>
-
                 </div>
 
                 <!-- 2ND PRODUCT -->
                 <div class="product">
                     <!-- background image -->
                     <div class="bg-product">
-                        <img src="img/2.webp" alt="Roses Tee">
+                        <img class="img-default" src="img/2.webp" alt="Roses Tee">
                         <div class="labels">
                             <span class="label discount">-30%</span>
                         </div>
@@ -55,7 +54,7 @@
                 <div class="product">
                     <!-- background image -->
                     <div class="bg-product">
-                        <img src="img/3.webp" alt="Gree Dress">
+                        <img class="img-default" src="img/3.webp" alt="Gree Dress">
                         <span class="wishlist">&hearts;</span>
                         <img class="alternative" src="img/3b.webp" alt="Brown Dress">
                     </div>
@@ -73,7 +72,7 @@
                 <div class="product">
                     <!-- background image -->
                     <div class="bg-product">
-                        <img src="img/4.webp" alt="Levi's Tee">
+                        <img class="img-default" src="img/4.webp" alt="Levi's Tee">
                         <div class="labels">
                             <span class="label discount">-50%</span>
                             <span class="label sustain">Sostenibilità</span>
@@ -85,14 +84,13 @@
                     <div class="brand">Levi's</div>
                     <div class="dress">TEE UNISEX</div>
                     <span class="price">14,99 € </span><del>29,99 €</del>
-
                 </div>
 
                 <!-- 5TH PRODUCT -->
                 <div class="product">
                     <!-- background image -->
                     <div class="bg-product">
-                        <img src="img/5.webp" alt="Pink Dress">
+                        <img class="img-default" src="img/5.webp" alt="Pink Dress">
                         <span class="wishlist">&hearts;</span>
                         <img class="alternative" src="img/5b.webp" alt="Silver Purse">
                     </div>
@@ -106,7 +104,7 @@
                 <div class="product">
                     <!-- background image -->
                     <div class="bg-product">
-                        <img src="img/6.webp" alt="Black Sweater">
+                        <img class="img-default" src="img/6.webp" alt="Black Sweater">
                         <div class="labels">
                             <span class="label sustain">Sostenibilità</span>
                         </div>
